# deepgram-python-sdk

./: .coverage  .env  .env.example  .fernignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .pylintrc  .yamllintconfig.yaml  AGENTS.md  BUG_ANALYSIS_SUMMARY.md  BUG_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  app.yaml  changelog.md  context7.json  mypy.ini  package-lock.json  pyproject.toml  reference.md  release-please-config.json  requirements-dev.txt  requirements.txt  sagemaker_bidi_api.md  setup.py  ui_app.py  websockets-reference.md
.claude/skills/: prepare-regen.md  review-regen.md
.devcontainer/: devcontainer.json
.fern/: metadata.json
.github/: .commitlintrc.json  .release-please-manifest.json  BRANCH_AND_RELEASE_PROCESS.md  CODEOWNERS  CODE_CONTRIBUTIONS_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_WORKFLOW.md  PULL_REQUEST_TEMPLATE.md  release-please-config.json  release-please.yml
deepgram/: __init__.py  _constants.py  _enums.py  _types.py  _utils.py  _version.py  client.py  deepgram_client.py  deepgram_client_options.py  enums.py  errors.py  extra.py  helpers.py  keys.py  options.py  projects.py  transcription.py  transcription_.py  usage.py
docs/: Migrating-v2-to-v3.md  Migrating-v3-to-v5.md  Migrating-v5-to-v6.md  Migrating-v6-to-v7.md  conf.py  index.rst  requirements.txt
examples/: .env_example  01-authentication-api-key.py  02-authentication-access-token.py  04-transcription-prerecorded-url.py  05-transcription-prerecorded-file.py  06-transcription-prerecorded-callback.py  07-transcription-live-websocket.py  09-voice-agent.py  10-text-to-speech-single.py  10-transcription-prerecorded-url.py  11-text-to-speech-streaming.py  12-text-intelligence.py  13-management-projects.py  13-transcription-live-websocket.py  14-management-keys.py  14-transcription-live-websocket-v2.py  15-management-members.py  16-management-invites.py  17-management-usage.py  18-management-billing.py  19-management-models.py  20-onprem-credentials.py  20-text-to-speech-single.py  21-text-to-speech-streaming.py  22-text-builder-demo.py  22-transcription-advanced-options.py  23-request-options.py  23-text-builder-helper.py  24-error-handling.py  24-text-builder-streaming.py  25-text-builder-demo.py  25-text-builder-helper.py  25-text-to-speech-streaming-v2.py  26-transcription-live-websocket-v2.py  27-transcription-live-sagemaker.py  30-voice-agent-connection.py  30-voice-agent.py  31-voice-agent-interaction.py  40-text-intelligence.py  50-management-projects.py  (+17 more)
scripts/: patch_websocket_transport.py  run_examples.sh
tests/: conftest.py  mock_response.json  mock_response.py  test_aiohttp_autodetect.py  test_billing.py  test_extra.py  test_transcription.py  test_ui_app.py
wiremock/: wiremock-mappings.json  wiremock-mappings.json.bak
(+2199 files in other folders)
