[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepgram-sdk"
dynamic = ["version", "description", "readme", "license", "authors", "keywords", "classifiers", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "deepgram.__version__"}
