######
# general configuration
######
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepgram-sdk"
dynamic = ["version", "description", "readme", "license", "authors", "keywords", "classifiers", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "deepgram.__version__"}

######
# poetry configuration
######
# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"

# poetry configuration
[tool.poetry]
name = "deepgram"
version = "3.0.0"
description = "The official Python SDK for the Deepgram automated speech recognition platform."
authors = ["Deepgram DevRel <devrel@deepgram.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.25.2"
websockets = "^12.0"
typing-extensions = "^4.8.0"
dataclasses-json = "^0.6.3"
python-dotenv = "^1.0.0"
asyncio = "^3.4.3"
aiohttp = "^3.9.1"
verboselogs = "^1.7"
pyaudio = "^0.2.14"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
fuzzywuzzy = "^0.18.0"
pytest-cov = "^4.1.0"
