######
# general configuration
######
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepgram-sdk"
dynamic = ["version", "description", "readme", "license", "authors", "keywords", "classifiers", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "deepgram.__version__"}

######
# poetry configuration
######
# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"

# poetry configuration
[tool.poetry]
name = "deepgram"
version = "3.X.Y" # Please update this to the version you are using
description = "The official Python SDK for the Deepgram automated speech recognition platform."
authors = ["Deepgram DevRel <devrel@deepgram.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.25.2"
websockets = "^12.0"
typing-extensions = "^4.9.0"
dataclasses-json = "^0.6.3"
aiohttp = "^3.9.1"
aiofiles = "^23.2.1"
verboselogs = "^1.7"
# needed only if you are looking to use samples in the "examples" folder
# pyaudio = "^0.2.14"
# python-dotenv = "^1.0.0"
# needed for contributing to the SDK
# pytest-asyncio = "^0.21.1"
# pytest = "^7.4.3"
# fuzzywuzzy = "^0.18.0"
# pytest-cov = "^4.1.0"

# [tool.poetry.group.dev.dependencies]
# fuzzywuzzy = "^0.18.0"
